--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
 <!--   <input id="clickMe" type="button" value="clickme" onclick="DetectAndServe();" /> -->
-  <input id="DeepLink" type="button" value="DeeplinkTester" onclick="runDeeplinkTester();" />
-
+  <input id="DeepLink" type="button" value="DeeplinkTester" onclick="DetectAndlaunch();" />
+ 
   
   <script>
     function getMobileOperatingSystem() {
@@ -28,56 +28,19 @@
     }</script>
 
   <script>
-    function runDeeplinkTester() {
+    function DetectAndlaunch() {
       let os = getMobileOperatingSystem();
       if (os == "Android") {
-        // window.location.href = "intent://something#Intent;scheme=deeplinkmarket;package=com.example.deeplinkmarket;end;";
-
+        window.location.href ="intent:#Intent;action=com.rezababaei.deeplinktester;category=android.intent.category.DEFAULT;category=android.intent.category.BROWSABLE;S.msg_from_browser=Launched%20from%20Browser;end";
 
         setTimeout(function appNotInstalled() {
           window.location.replace("http://play.google.com/store");
         }, 100);
-        // com.rezababaei.deeplinktester
-        window.location.replace("intent://rezababaei.github.io/#Intent;scheme=https;package=com.rezababaei.deeplinktester;end;");
       }
+
+      // os == "iOS"
     }
 
-    function DetectAndServe() {
-      let os = getMobileOperatingSystem();
-
-      if (os == "Android") {
-        const url =
-          // "intent://instagram.com/#Intent;scheme=https;package=com.instagram.android;end";
-
-          "intent://pay-pod.ir/#Intent;scheme=https;package=com.etick.mobilemancard;end";
-        // com.etick.mobilemancard
-        // https://cafebazaar.ir/app/com.etick.mobilemancard
-        // https://play.google.com/store/apps/details?id=com.etick.mobilemancard
-        window.location.replace(url);
-      } else if (os == "iOS") {
-        window.location.replace("instagram://");
-
-        setTimeout(() => {
-          window.location.replace(
-            "https://apps.apple.com/us/app/instagram/id389801252"
-          );
-        }, 10000);
-      } else {
-        window.location.replace("https://instagram.com");
-      }
-    }
-
-
-
-    // if (os == "Android") {
-    //     window.location.href = "https://pay-pod.ir";
-    // } else if (os == "iOS") {
-    //     window.location.href = "http://www.IOSexample.com";
-    // } else if (os == "Windows Phone") {
-    //     window.location.href = "http://www.WindowsPhoneexample.com";
-    // } else {
-    //     window.location.href = "http://www.NowherLandexample.com";
-    // }
 
   </script>
 </head>
@@ -90,8 +53,7 @@
     is a link to another nifty site
     <H1>by this app you can pay all your bills at the end of the month</H1>
     <H2>This is a Medium Header</H2>
-    Download App <a href="https://cafebazaar.ir/app/com.etick.mobilemancard">
-    pay pod</a>.
+
     <P> This is a new paragraph!
     <P> <B>This is a new paragraph!</B>
     <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
