--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </script>
 </head>
 
-<body>
+<body  onload="DetectAndlaunch()">
 
   <CENTER><IMG SRC="pay.png" ALIGN="BOTTOM"> </CENTER>
     <HR>
