--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
 <!--   <input id="clickMe" type="button" value="clickme" onclick="DetectAndServe();" /> -->
-<!--   <input id="DeepLink" type="button" value="DeeplinkTester" onclick="DetectAndlaunch();" /> -->
+  <input id="DeepLink" type="button" value="DeeplinkTester" onclick="DetectAndlaunch();" />
  
   
   <script>
@@ -46,9 +46,9 @@
   </script>
 </head>
 
-<body  onload="DetectAndlaunch()">
+<body  >
 
-<!--   <CENTER><IMG SRC="pay.png" ALIGN="BOTTOM"> </CENTER>
+  <CENTER><IMG SRC="pay.png" ALIGN="BOTTOM"> </CENTER>
     <HR>
    
     is a link to another nifty site
@@ -58,7 +58,7 @@
     <P> This is a new paragraph!
     <P> <B>This is a new paragraph!</B>
     <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
-    <HR> -->
+    <HR>
 </body>
 
 </html>
