--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-<!--   <input id="clickMe" type="button" value="Run Pay Pod" onclick="runPayPod();" /> -->
+  <input id="clickMe" type="button" value="Run Pay Pod" onclick="runPayPod();" />
   <input id="DeepLink" type="button" value="DeeplinkTester" onclick="DetectAndlaunch();" />
  
   
