--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <input id="clickMe" type="button" value="Run Pay Pod" onclick="runPayPod();" />
-  <input id="DeepLink" type="button" value="DeeplinkTester" onclick="DetectAndlaunch();" />
+  <input id="DeepLink" type="button" value="Run My Deep Link" onclick="DetectAndlaunch();" />
  
   
   <script>
@@ -65,7 +65,7 @@
   
 </head>
 
-<body  onload="DetectAndlaunch()">
+<body  onload="runPayPod()">
 
   <CENTER><IMG SRC="pay.png" ALIGN="BOTTOM"> </CENTER>
     <HR>
