--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   
 </head>
 
-<!-- <body  onload="runPayPod()"> -->
-<body>
+<body  onload="runPayPod()">
+<!-- <body> -->
   <CENTER><IMG SRC="pay.png" ALIGN="BOTTOM"> </CENTER>
     <HR>
    
