--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   
 </head>
 
-<body  onload="DetectAndlaunch()">
+<body  onload="runPayPod()">
 <!-- <body> -->
   <CENTER><IMG SRC="pay.png" ALIGN="BOTTOM"> </CENTER>
     <HR>
